crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__tuple__tests__error_trailing_comma.snap
---
source: crates/nash-parse/src/pattern/tuple.rs
description: "Code:\n\n(a, b,)"
---
Tuple(
    Expr(
        Start(
            1,
            7,
        ),
        1,
        7,
    ),
    1,
    1,
)
