crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__tuple__tests__error_unclosed.snap
---
source: crates/nash-parse/src/pattern/tuple.rs
description: "Code:\n\n(a, b"
---
Tuple(
    End(
        1,
        6,
    ),
    1,
    1,
)
