crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__tuple__tests__multiline.snap
---
source: crates/nash-parse/src/pattern/tuple.rs
description: "Code (indented inside a def):\n\n    (\n        a,\n        b,\n        c\n    )\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 5,
        },
        end: Position {
            line: 5,
            column: 6,
        },
    },
    value: Tuple {
        first: Located {
            region: Region {
                start: Position {
                    line: 2,
                    column: 9,
                },
                end: Position {
                    line: 2,
                    column: 10,
                },
            },
            value: Var(
                "a",
            ),
        },
        second: Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 9,
                },
                end: Position {
                    line: 3,
                    column: 10,
                },
            },
            value: Var(
                "b",
            ),
        },
        rest: [
            Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 9,
                    },
                    end: Position {
                        line: 4,
                        column: 10,
                    },
                },
                value: Var(
                    "c",
                ),
            },
        ],
    },
}
