crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__tuple__tests__nested.snap
---
source: crates/nash-parse/src/pattern/tuple.rs
description: "Code:\n\n((a, b), c)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 12,
        },
    },
    value: Tuple(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 8,
                },
            },
            value: Tuple(
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 3,
                        },
                        end: Position {
                            line: 1,
                            column: 4,
                        },
                    },
                    value: Var(
                        "a",
                    ),
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 6,
                        },
                        end: Position {
                            line: 1,
                            column: 7,
                        },
                    },
                    value: Var(
                        "b",
                    ),
                },
                [],
            ),
        },
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 10,
                },
                end: Position {
                    line: 1,
                    column: 11,
                },
            },
            value: Var(
                "c",
            ),
        },
        [],
    ),
}
