crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__tuple__tests__triple.snap
---
source: crates/nash-parse/src/pattern/tuple.rs
description: "Code:\n\n(a, b, c)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 10,
        },
    },
    value: Tuple {
        first: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 3,
                },
            },
            value: Var(
                "a",
            ),
        },
        second: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 5,
                },
                end: Position {
                    line: 1,
                    column: 6,
                },
            },
            value: Var(
                "b",
            ),
        },
        rest: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 8,
                    },
                    end: Position {
                        line: 1,
                        column: 9,
                    },
                },
                value: Var(
                    "c",
                ),
            },
        ],
    },
}
