crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__tuple__tests__unit.snap
---
source: crates/nash-parse/src/pattern/tuple.rs
description: "Code:\n\n()"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 3,
        },
    },
    value: Unit,
}
