crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__tuple__tests__with_constructors.snap
---
source: crates/nash-parse/src/pattern/tuple.rs
description: "Code:\n\n(Just x, Nothing)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 18,
        },
    },
    value: Tuple {
        first: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 8,
                },
            },
            value: Ctor {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 2,
                    },
                    end: Position {
                        line: 1,
                        column: 6,
                    },
                },
                name: "Just",
                args: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 7,
                            },
                            end: Position {
                                line: 1,
                                column: 8,
                            },
                        },
                        value: Var(
                            "x",
                        ),
                    },
                ],
            },
        },
        second: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 10,
                },
                end: Position {
                    line: 1,
                    column: 17,
                },
            },
            value: Ctor {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 10,
                    },
                    end: Position {
                        line: 1,
                        column: 17,
                    },
                },
                name: "Nothing",
                args: [],
            },
        },
        rest: [],
    },
}
